--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                   <strong> G A M E O V E R!!!!! <br>
                   The correct word is </strong> <strong class="correctWord"></strong>
                 </p>
-                
-                <button class="playAgain">Play Again</button>
+                <button class="playGame">Play Again</button>
             </div>
               
               <div class="modalCongrats hidden">
