--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <button class="closeModalTip hidden">&times;</button> 
                   <p class="tipText">
                   <img src="image/clue.svg" alt="tip"> You have 11 tries to find the hidden words for Technology category.
-                  </br><strong>TIP </strong>: Try using the popular vowels initially (A,E,I,U)
+                  </br><strong>TIP </strong>: Try using the popular vowels initially (A,E,I,O,U)
                   </p>
                   <button class="startGame hidden">Start Game</button>
               </div>
